--- a/TestForJavaWorkflow/WebContent/index.html
+++ b/TestForJavaWorkflow/WebContent/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Nate's Page</title>
 </head>
 <body>
-Yo, dawg
+Yo, dawg what up
 </body>
 </html>
